<resources>
    <string name="app_name">Barnaul Zoopark</string>
    <string name="api_key">AIzaSyCcXXhw8Ztu-yfwxX7aNWd5qTp8gTAeWhI</string>

    <string name="nav_drawer_open">nav drawer open</string>
    <string name="nav_drawer_closed">nav drawer closed</string>

    <!--navigation items-->
    <string name="our_animals">Our animals</string>
    <string name="news">News</string>
    <string name="photo_and_video">Photos and videos</string>
    <string name="navigation">Navigation</string>
    <string name="zoo_park_map">Map</string>
    <string name="cage_location">Cage\'s location</string>
    <string name="information">Information</string>
    <string name="schedule">Schedule</string>
    <string name="ticket_price">Ticket price</string>
    <string name="about_zoopark">About</string>
    <!--authorize-->
    <string name="login_with">Login with</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forget_password"><u>Forgot password?</u></string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="create_to_support">Create a new account to help us with our beloved animals, and also to receive news about the zoo and cool gifts!</string>
    <string name="skip">Skip</string>
    <string name="verify_logout">Are you sure want to log out?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="dear_visitor">Dear visitor</string>
    <string name="welcome_to_our_zoo">Welcome to the zoo!</string>
    <string name="edit_name">Edit username:</string>
    <string name="edit_name_hint">Enter name</string>

    <string-array name="suggestions">
        <item>Apple</item>
        <item>Apricot</item>
        <item>Avocado</item>
        <item>Banana</item>
        <item>Blueberry</item>
        <item>Blackberry</item>
        <item>Carrot</item>
        <item>Cherry</item>
        <item>Orange</item>
        <item>Potato</item>
        <item>Peach</item>
        <item>Passion fruit</item>
        <item>Pear</item>
        <item>Orange</item>
        <item>Potato</item>
        <item>Peach</item>
        <item>Passion fruit</item>
        <item>Pear</item>
        <item>Orange</item>
        <item>Potato</item>
        <item>Peach</item>
        <item>Passion fruit</item>
        <item>Pear</item>
        <item>Strawberry</item>
    </string-array>

    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="remove_photo">Remove photo</string>

    <string name="discard_your_changes">Discard your changes?</string>
    <string name="discard">Discard</string>
    <string name="data_control">Data control</string>
    <string name="data_management_animal_species">Animal species</string>
    <string name="data_management_animal_categories">Animal categories</string>
    <string name="data_management_animals">Animals</string>
    <string name="create_category">Create category</string>
    <string name="edit_category">Edit category</string>
    <string name="created_successful">Created successful</string>
    <string name="remove">Remove</string>
    <string name="remove_success">Removed successful</string>
    <string name="edit_species">Edit species</string>
    <string name="create_species">Create species</string>
    <string name="select">Select</string>
    <string name="categories_empty_error">Select or create a category first!</string>
    <string name="edit_animal">Edit animal</string>
    <string name="create_animal">Create animal</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="youtube_prefix">youtube.com/watch?v=</string>
    <string name="habitat">— Habitat</string>
    <string name="animal_detail_about_animal">About animal</string>
    <string name="animal_detail_photos">Photos</string>
    <string name="animal_detail_name">Name:</string>
    <string name="animal_detail_entry_date">Entry Date:</string>
    <string name="animal_detail_date_of_birth">Date of birth:</string>
    <string name="animal_detail_video">Video</string>
    <string name="species_invalid_error">Select or create a species first!</string>
    <string name="species_hint_name">name</string>
    <string name="species_hint_description">description</string>
    <string name="edit_successful">Edited successfully</string>
    <string name="species">Species</string>
    <string name="remove_child_from_category_title">Remove \"%s\" from current category?</string>
    <string name="animals">Animals</string>
    <string name="remove_child_from_species_title">Remove \"%s\" from current species?</string>
    <string name="select_category_hint">Select a category</string>
    <string name="select_species_hint">Select a species</string>
    <string name="creating_animal">Creating animal…</string>
    <string name="updating_animal">Updating animal data…</string>
    <string name="loading_animal">Loading selected animal…</string>
    <string name="updating_species">Updating animal species…</string>
    <string name="creating_species">Creating animal species…</string>
    <string name="loading_species">Loading selected animal species…</string>
    <string name="creating_category">Creating animal category…</string>
    <string name="updating_category">Updating animal category…</string>
    <string name="loading_category">Loading selected animal category…</string>
    <string name="removing">Removing…</string>
    <string name="deleting_news_item">Deleting news item…</string>
    <string name="creating_news_item">Creating news item…</string>
    <string name="updating_news_item">Updating news item…</string>
    <string name="animals_list_empty">List of animals is empty!</string>
    <string name="admin">Admin</string>
    <string name="animal_blog">Animal blog</string>
    <string name="user_profile">My account</string>
    <string name="favourite_animals">Favourite animals</string>
    <string name="user_data_empty">User\'s data not found!</string>
    <string name="admin_privilege_status">(admin)</string>
    <string name="subscribing_to_animal">Updating user\'s data</string>
    <string name="subscribed">Subscribed</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="empty">Empty</string>
    <string name="loading_favorite_animals">Loading favorite animals…</string>
    <string name="data_management_blog_animals">Animal blogs</string>
    <string name="edit_blog_animal">Edit animal blog</string>
    <string name="create_blog_animal">Create animal blog</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="animal_invalid_error">Select or create an animal first!</string>
    <string name="select_animal_hint">Select an animal</string>
    <string name="creating_blog_animal">Creating animal blog…</string>
    <string name="blog_animal_created_success">Animal blog created successfully</string>
    <string name="data_management_remove_title" formatted="false">Remove \"%s\" %s?</string>
    <string name="remove_item_animal">animal</string>
    <string name="remove_item_species">species</string>
    <string name="remove_item_category">category</string>
    <string name="remove_item_blog_animal">animal blog</string>
    <string name="loading_blogs">Loading blogs of favorite animals…</string>
    <string name="loading_selected_blog">Loading selected blog…</string>
    <string name="updating_blog">Updating animal blog…</string>
    <string name="data_management_news">News</string>
    <string name="remove_item_news">news item</string>
    <string name="edit_news_item">Edit news</string>
    <string name="create_news_item">Create news</string>
    <string name="push_notification_blog_animal_title">Something new about your favorite animal!</string>
    <string name="push_notification_blog_animal_text">New blog created</string>
    <string name="virtual_tour">360° tour</string>
    <string name="location_updated">Location updated!</string>
    <string name="name_hint">name</string>
    <string name="price_hint">price</string>
    <string name="creating">Creating…</string>
    <string name="remove_item_ticket_price">ticket price</string>
    <string name="updating">Updating…</string>
    <string name="edit_ticket_price">Edit ticket price</string>
    <string name="create_ticket_price">Create ticket price</string>
    <string name="loading">Loading…</string>
    <string name="data_management_photo_album">Photo albums</string>
    <string name="edit_photo_album">Edit photo album</string>
    <string name="create_photo_album">Create photo album</string>
    <string name="remove_item_photo_album">photo album</string>
    <string name="data_management_video_album">Video albums</string>
    <string name="create_video_album">Create video album</string>
    <string name="edit_video_album">Edit video album</string>
    <string name="remove_item_video_album">video album</string>
    <string name="youtube_thumbnail">https://img.youtube.com/vi/%s/default.jpg</string>
    <string name="distance_away">%s meters away</string>
    <string name="current_location">Current location:</string>
    <string name="sponsors">Sponsors</string>
    <string name="edit_sponsor">Edit sponsor</string>
    <string name="create_sponsor">Create sponsor</string>
    <string name="website_hint">website</string>
    <string name="remove_item_sponsor">sponsor</string>
    <string name="action_ok">OK</string>
</resources>
