<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/general_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/news"
            android:checked="true"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/news" />

        <item
            android:id="@+id/ourAnimals"
            android:checked="false"
            android:icon="@drawable/ic_pets_black"
            android:title="@string/our_animals" />

        <item
            android:id="@+id/photoAndVideo"
            android:checked="false"
            android:icon="@drawable/ic_collections_black"
            android:title="@string/photo_and_video" />
    </group>

    <item android:title="@string/information">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_calendar_schedule"
                    android:title="@string/schedule" />
                <item
                    android:id="@+id/ticketPrices"
                    android:icon="@drawable/ic_currency_ruble"
                    android:title="@string/ticket_price" />
            </group>
        </menu>
    </item>
    <item android:title="@string/navigation">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/zooMap"
                    android:icon="@drawable/ic_map_black"
                    android:title="@string/zoo_park_map" />
                <item
                    android:icon="@drawable/ic_search_pet"
                    android:title="@string/cage_location" />
                <item
                    android:id="@+id/virtualTour"
                    android:icon="@drawable/ic_sphere_pano"
                    android:title="@string/virtual_tour" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/userProfile"
        android:title="@string/user_profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/favouriteAnimals"
                    android:icon="@drawable/ic_favorite_filled"
                    android:title="@string/favourite_animals" />
                <item
                    android:id="@+id/blogAnimal"
                    android:icon="@drawable/ic_panda"
                    android:title="@string/animal_blog" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/admin"
        android:title="@string/admin">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dataControl"
                    android:icon="@drawable/ic_database"
                    android:title="@string/data_control" />
            </group>
        </menu>
    </item>

    <group
        android:id="@+id/about_group"
        android:checkableBehavior="single">

        <item
            android:checked="false"
            android:title="@string/about_zoopark" />
    </group>
</menu>