<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="key_news"
        app:title="@string/data_management_news" />

    <Preference
        android:key="key_animal_categories"
        app:title="@string/data_management_animal_categories" />

    <Preference
        android:key="key_animal_species"
        app:title="@string/data_management_animal_species" />

    <Preference
        android:key="key_animals"
        app:title="@string/data_management_animals" />

    <Preference
        android:key="key_ticket_price"
        app:title="@string/ticket_price" />

    <Preference
        android:key="key_blog_animal"
        app:title="@string/data_management_blog_animals" />

    <Preference
        android:key="key_photo_album"
        app:title="@string/data_management_photo_album" />
</PreferenceScreen>