<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.dat.barnaulzoopark.widget.SquareFrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_file_attachment_border">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/attach"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:foreground="?android:selectableItemBackground"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_add" />


            <ImageButton
                android:id="@+id/remove"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/black_transparent_15"
                android:foreground="?android:selectableItemBackground"
                android:tint="@color/white"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_delete" />
        </com.dat.barnaulzoopark.widget.SquareFrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/species_hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:hint="@string/species_hint_description"
        android:inputType="text|textMultiLine"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/childrenHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/animals"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18"
        android:visibility="gone"
        tools:visibility="visible" />
</LinearLayout>