<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_gradient"
        android:orientation="horizontal"
        android:paddingBottom="12dp">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="left|top"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo_banner" />

        <LinearLayout
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:src="@drawable/chevron_double_ic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_12" />
        </LinearLayout>
    </FrameLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35" />

    <LinearLayout
        android:id="@+id/signup"
        android:layout_width="@dimen/default_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_corner_signup_btn_bg"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        tools:layout_width="360dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_24" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="@dimen/default_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_corner_login_btn_bg"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        tools:layout_width="360dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_24" />
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6" />

    <LinearLayout
        android:id="@+id/loginFb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fb_transparent_70"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_with"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_18" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/fb_white_ic"
            app:riv_corner_radius="2dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/loginVk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/vk_transparent_85"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_with"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_18" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/vk_ic"
            android:tint="@color/white"
            app:riv_corner_radius="2dp" />
    </LinearLayout>

</LinearLayout>
